change vm to container/image language

--- a/source/setup.Rmd
+++ b/source/setup.Rmd
@@ -59,7 +59,7 @@ software packages, not to mention getting the right versions of
 everything&mdash;the worksheets and autograder tests may not work unless all the versions are
 exactly right! To keep things simple, we instead recommend that you install
 [Docker](https://docker.com). Docker lets you run your Jupyter notebooks inside
-a pre-built *virtual machine* that comes with precisely the right versions of 
+a pre-built *container* that comes with precisely the right versions of 
 all software packages needed run the worksheets that come with this book.
 \index{Docker}
 
@@ -129,10 +129,13 @@ More information on installing and running
 Docker on Windows, as well as troubleshooting tips, can be found [in the online
 Docker documentation](https://docs.docker.com/desktop/install/windows-install/).
 
-**Running JupyterLab** Once Docker is running (in either Windows or MacOS), you need to download and run the virtual machine that we have made available
-for the worksheets. In the search bar, enter `ubcdsci/r-dsci-100`, as this is the name of the virtual machine image. You will be presented
-with a few options (Figure \@ref(fig:docker-desktop-search)). In the "Tag" drop down menu, click the tag `20230724142640d8f06f` to select the 
-correct version of the image. Then click the "Pull" button to download the image.
+**Running JupyterLab** Once Docker is running (in either Windows or MacOS), you need to download and run the  
+Docker *image* that we have made available for the worksheets (an *image* is like a "snapshot" of a 
+computer with all the right packages pre-installed). In the search bar, enter `ubcdsci/r-dsci-100`, as this is 
+the name of the image. You will be presented
+with a few options (Figure \@ref(fig:docker-desktop-search)). In the "Tag" drop down menu, click 
+the tag `20230724142640d8f06f` to select the correct version of the image. Then click 
+the "Pull" button to download the image.
 
 ```{r docker-desktop-search, echo = FALSE, fig.cap = "The Docker Desktop search window. Make sure to click the Tag drop down menu and find the right version of the image before clicking the Pull button to download it.", fig.retina = 2, out.width="100%"}
 image_read("img/setup/docker-1.png") |> 
@@ -147,7 +150,7 @@ image_read("img/setup/docker-2.png") |>
   image_crop("3632x2000")
 ```
 
-To run the virtual machine, click the play button beside the image. This will open the run configuration menu (Figure \@ref(fig:docker-desktop-runconfig)).
+To start up a *container* using that image, click the play button beside the image. This will open the run configuration menu (Figure \@ref(fig:docker-desktop-runconfig)).
 In the "Host port" textbox, enter `8888`. In the "Volumes" section, click the "Host path" box and navigate to the folder where your Jupyter worksheets
 are stored. In the "Container path" text box, enter `/home/jovyan/work`. Then click the "Run" button to start the container.
 
