Plot all data as per the text

--- a/source/regression1.Rmd
+++ b/source/regression1.Rmd
@@ -666,7 +666,7 @@ sacr_preds <- sacr_fit |>
   predict(sqft_prediction_grid) |>
   bind_cols(sqft_prediction_grid)
 
-plot_final <- ggplot(sacramento_train, aes(x = sqft, y = price)) +
+plot_final <- ggplot(sacramento, aes(x = sqft, y = price)) +
   geom_point(alpha = 0.4) +
   geom_line(data = sacr_preds, 
             mapping = aes(x = sqft, y = .pred), 
