--- a/source/regression2.Rmd
+++ b/source/regression2.Rmd
@@ -312,7 +312,7 @@ sacr_preds <- lm_fit |>
   predict(sqft_prediction_grid) |>
   bind_cols(sqft_prediction_grid)
 
-lm_plot_final <- ggplot(sacramento_train, aes(x = sqft, y = price)) +
+lm_plot_final <- ggplot(sacramento, aes(x = sqft, y = price)) +
   geom_point(alpha = 0.4) +
   geom_line(data = sacr_preds, 
             mapping = aes(x = sqft, y = .pred), 
