Minor polish sync with py

--- a/source/regression2.Rmd
+++ b/source/regression2.Rmd
@@ -293,7 +293,7 @@ tricky and requires knowledge of how you intend to use the prediction.
 To visualize the simple linear regression model, we can plot the predicted house
 sale price across all possible house sizes we might encounter.
 Since our model is linear,
-we only need to compute the predicted value of the min and max points,
+we only need to compute the predicted price of the minimum and maximum house size,
 and then connect them with a straight line.
 We superimpose this prediction line on a scatter
 plot of the original housing price data,
