sync python clustering wording

--- a/source/clustering.Rmd
+++ b/source/clustering.Rmd
@@ -164,7 +164,9 @@ This will ensure we have access to the functions we need
 and that our analysis will be reproducible.
 As we will learn in more detail later in the chapter, 
 setting the seed here is important 
-because the K-means clustering algorithm uses random numbers.
+because the K-means clustering algorithm uses randomness
+when choosing a starting position for each cluster.
+
 
 ```{r 10-toy-example-data, echo = FALSE, message = FALSE, warning = FALSE}
 library(tidyverse)
