minor setup bugfix

--- a/source/setup.Rmd
+++ b/source/setup.Rmd
@@ -127,7 +127,7 @@ image_read("img/setup/docker-3.png") |>
 After clicking the "Run" button, you will see a terminal. The terminal will then print 
 some text as the Docker container starts. Once the text stops scrolling, find the 
 URL in the terminal that starts 
-with `http://127.0.0.1:8888` (highlighted by the red box in Figure \@ref(fig:ubuntu-docker-terminal)), and paste it 
+with `http://127.0.0.1:8888` (highlighted by the red box in Figure \@ref(fig:docker-desktop-url)), and paste it 
 into your browser to start JupyterLab.
 
 
@@ -136,7 +136,7 @@ image_read("img/setup/docker-4.png") |>
   image_crop("3632x2000")
 ```
 When you are done working, make sure to shut down and remove the container by 
-clicking the red trash can symbol (in the top right corner of Figure \@ref(fig:ubuntu-docker-terminal)).
+clicking the red trash can symbol (in the top right corner of Figure \@ref(fig:docker-desktop-url)).
 You will not be able to start the container again until you do so.
 More information on installing and running
 Docker on Windows, as well as troubleshooting tips, can 
@@ -188,9 +188,6 @@ More information on installing and running Docker on Ubuntu, as well as troubles
 image_read("img/setup/ubuntu-docker.png") |> 
   image_crop("3632x2000")
 ```
-
-
-
 
 ## Working with JupyterLab Desktop
 
