--- a/source/setup.Rmd
+++ b/source/setup.Rmd
@@ -179,7 +179,7 @@ docker run --rm -v $(pwd):/home/jovyan/work -p 8888:8888 ubcdsci/r-dsci-100:2023
 ```
 The terminal will then print some text as the Docker container starts. Once the text stops scrolling, find the 
 URL in your terminal that starts with `http://127.0.0.1:8888` (highlighted by the 
-red box Figure \@ref(fig:ubuntu-docker-terminal)), and paste it into your browser to start JupyterLab.
+red box in Figure \@ref(fig:ubuntu-docker-terminal)), and paste it into your browser to start JupyterLab.
 More information on installing and running Docker on Ubuntu, as well as troubleshooting tips, can be found in
 [the online Docker documentation](https://docs.docker.com/engine/install/ubuntu/).
 
