minor fix to viz

--- a/source/viz.Rmd
+++ b/source/viz.Rmd
@@ -1468,7 +1468,7 @@ to save a file containing this image.
 `ggsave` works by taking a file name to create for the image 
 as its first argument. 
 This can include the path to the directory where you would like to save the file 
-(e.g., `img/filename.png` to save a file named `filename` to the `img` directory),
+(e.g., `img/viz/filename.png` to save a file named `filename` to the `img/viz/` directory),
 and the name of the plot object to save as its second argument.
 The kind of image to save is specified by the file extension.
 For example, 
