remove version-specific tags from setup chapter

--- a/source/setup.Rmd
+++ b/source/setup.Rmd
@@ -91,11 +91,16 @@ and follow the instructions on the installation wizard, choosing **WSL-2** inste
 
 **Running JupyterLab** Run Docker Desktop. Once it is running, you need to download and run the
 Docker *image* that we have made available for the worksheets (an *image* is like a "snapshot" of a 
-computer with all the right packages pre-installed). In the search bar, enter `ubcdsci/r-dsci-100`, as this is 
-the name of the image. You will be presented
-with a few options (Figure \@ref(fig:docker-desktop-search)). In the "Tag" drop down menu, click 
-the tag `20230724142640d8f06f` to select the correct version of the image. Then click 
-the "Pull" button to download the image.
+computer with all the right packages pre-installed). You only need to do this step one time; the image will remain
+the next time you run Docker Desktop.
+In the Docker Desktop search bar, enter `ubcdsci/r-dsci-100`, as this is 
+the name of the image. You will see the `ubcdsci/r-dsci-100` image in the list (Figure \@ref(fig:docker-desktop-search)),
+and "latest" in the Tag drop down menu. We need to change "latest" to the right image version before proceeding.
+To find the right tag, open 
+the [`Dockerfile` in the worksheets repository](https://raw.githubusercontent.com/UBC-DSCI/data-science-a-first-intro-worksheets/main/Dockerfile),
+and look for the line `FROM ubcdsci/r-dsci-100:` followed by the tag consisting of a sequence of numbers and letters.
+Back in Docker Desktop, in the "Tag" drop down menu, click that tag to select the correct image version. Then click 
+the "Pull" button to download the image. 
 
 ```{r docker-desktop-search, echo = FALSE, fig.cap = "The Docker Desktop search window. Make sure to click the Tag drop down menu and find the right version of the image before clicking the Pull button to download it.", fig.retina = 2, out.width="100%"}
 image_read("img/setup/docker-1.png") |> 
@@ -172,10 +177,12 @@ sudo chmod u+x get-docker.sh
 sudo sh get-docker.sh
 ```
 
-**Running JupyterLab** In the terminal, navigate to the directory where you want to run JupyterLab, and run
-the following command.
+**Running JupyterLab** First, open the [`Dockerfile` in the worksheets repository](https://raw.githubusercontent.com/UBC-DSCI/data-science-a-first-intro-worksheets/main/Dockerfile),
+and look for the line `FROM ubcdsci/r-dsci-100:` followed by a tag consisting of a sequence of numbers and letters.
+Then in the terminal, navigate to the directory where you want to run JupyterLab, and run
+the following command, replacing `TAG` with the *tag* you found earlier.
 ```
-docker run --rm -v $(pwd):/home/jovyan/work -p 8888:8888 ubcdsci/r-dsci-100:20230724142640d8f06f jupyter lab
+docker run --rm -v $(pwd):/home/jovyan/work -p 8888:8888 ubcdsci/r-dsci-100:TAG jupyter lab
 ```
 The terminal will then print some text as the Docker container starts. Once the text stops scrolling, find the 
 URL in your terminal that starts with `http://127.0.0.1:8888` (highlighted by the 
@@ -237,12 +244,12 @@ knitr::include_graphics("img/setup/jlab-2.png")
 In this terminal, run the following commands:
 ```
 pip install --upgrade jupyterlab-git
-conda env update --file https://raw.githubusercontent.com/UBC-DSCI/data-science-a-first-intro-worksheets/main/environment.yml
+conda env update --file https://raw.githubusercontent.com/UBC-DSCI/data-science-a-first-intro-worksheets/main/env.yml
 ```
 The second command installs the specific R and package versions specified in
-the `environment.yml` file found in 
+the `env.yml` file found in 
 [the worksheets repository](https://worksheets.datasciencebook.ca).
-We will always keep the versions in the `environment.yml` file updated
+We will always keep the versions in the `env.yml` file updated
 so that they are compatible with the exercise worksheets that accompany the book.
 Once all of the software installation is complete, it is a good idea to restart 
 JupyterLab Desktop entirely before you proceed to doing your data analysis.
