revert env to environment.yml (compatibility with print 1st ed)

--- a/source/setup.Rmd
+++ b/source/setup.Rmd
@@ -244,12 +244,12 @@ knitr::include_graphics("img/setup/jlab-2.png")
 In this terminal, run the following commands:
 ```
 pip install --upgrade jupyterlab-git
-conda env update --file https://raw.githubusercontent.com/UBC-DSCI/data-science-a-first-intro-worksheets/main/env.yml
+conda env update --file https://raw.githubusercontent.com/UBC-DSCI/data-science-a-first-intro-worksheets/main/environment.yml
 ```
 The second command installs the specific R and package versions specified in
-the `env.yml` file found in 
+the `environment.yml` file found in 
 [the worksheets repository](https://worksheets.datasciencebook.ca).
-We will always keep the versions in the `env.yml` file updated
+We will always keep the versions in the `environment.yml` file updated
 so that they are compatible with the exercise worksheets that accompany the book.
 Once all of the software installation is complete, it is a good idea to restart 
 JupyterLab Desktop entirely before you proceed to doing your data analysis.
